--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -12,3 +12,7 @@ plugins:
     - '@semantic-release/commit-analyzer'
     - '@semantic-release/release-notes-generator'
     - '@semantic-release/github'
+    - - '@semantic-release/exec'
+      - prepareCmd: 'echo "Preparing to release ${nextRelease.version}"'
+      - generateNotes: 'cz bump --files-only'
+
