--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "",
+  "author": "Ali Sajid Imami",
   "dependencies": {
     "@actions/core": "^1.10.0"
   },
@@ -8,7 +8,7 @@
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
     "@typescript-eslint/parser": "^5.42.0",
-    "@vercel/ncc": "^0.34.0",
+    "@vercel/ncc": "^0.36.1",
     "eslint": "^8.26.0",
     "eslint-plugin-github": "^4.4.0",
     "eslint-plugin-jest": "^27.1.3",
