--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,19 @@
     "jest/globals": true,
     "node": true
   },
-  "extends": ["plugin:github/recommended"],
+  "extends": [
+    "plugin:github/recommended"
+  ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 9,
     "project": "./tsconfig.json",
     "sourceType": "module"
   },
-  "plugins": ["jest", "@typescript-eslint"],
+  "plugins": [
+    "jest",
+    "@typescript-eslint"
+  ],
   "rules": {
     "@typescript-eslint/array-type": "error",
     "@typescript-eslint/await-thenable": "error",
@@ -29,7 +34,10 @@
         "accessibility": "no-public"
       }
     ],
-    "@typescript-eslint/func-call-spacing": ["error", "never"],
+    "@typescript-eslint/func-call-spacing": [
+      "error",
+      "never"
+    ],
     "@typescript-eslint/no-array-constructor": "error",
     "@typescript-eslint/no-empty-interface": "error",
     "@typescript-eslint/no-explicit-any": "error",
@@ -52,7 +60,10 @@
     "@typescript-eslint/promise-function-async": "error",
     "@typescript-eslint/require-array-sort-compare": "error",
     "@typescript-eslint/restrict-plus-operands": "error",
-    "@typescript-eslint/semi": ["error", "never"],
+    "@typescript-eslint/semi": [
+      "error",
+      "never"
+    ],
     "@typescript-eslint/type-annotation-spacing": "error",
     "@typescript-eslint/unbound-method": "error",
     "camelcase": "off",
