--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Ali Sajid Imami",
   "dependencies": {
-    "@actions/core": "^1.11.0"
+    "@actions/core": "^1.10.0"
   },
   "description": "A Github Action to introduce a random delay in a Job",
   "devDependencies": {
@@ -26,7 +26,7 @@
   "license": "MIT",
   "main": "lib/main.js",
   "name": "random-wait-action",
-  "packageManager": "pnpm@7.14.2",
+  "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2",
   "private": true,
   "repository": {
     "type": "git",
