--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -15,4 +15,7 @@ plugins:
     - - '@semantic-release/exec'
       - prepareCmd: 'echo "Preparing to release ${nextRelease.version}"'
         generateNotes: 'cz bump --files-only'
+    - - '@semantic-release/git'
+      - assets: ['CHANGELOG.md', 'package.json', 'package-lock.json']
+      - message: 'chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}'
 
