--- a/package.json
+++ b/package.json
@@ -1,68 +1,45 @@
 {
-    "author": "Ali Sajid Imami",
-    "browserslist": {
-        "development": [
-            "last 3 chrome version",
-            "last 3 firefox version",
-            "last 5 safari version"
-        ],
-        "production": [
-            ">0.5%",
-            "not dead",
-            "not op_mini all"
-        ]
-    },
-    "dependencies": {
-        "@actions/core": "1.11.1",
-        "true-myth": "9.2.0"
-    },
-    "description": "A Github Action to introduce a random delay in a Job",
-    "devDependencies": {
-        "@eslint/js": "9.38.0",
-        "@rollup/plugin-commonjs": "28.0.9",
-        "@rollup/plugin-node-resolve": "16.0.3",
-        "@rollup/plugin-typescript": "12.3.0",
-        "@stylistic/eslint-plugin": "5.5.0",
-        "@types/eslint": "9.6.1",
-        "@vercel/ncc": "0.38.4",
-        "@vitest/coverage-v8": "4.0.3",
-        "@vitest/eslint-plugin": "1.3.24",
-        "@vitest/ui": "4.0.3",
-        "eslint": "9.38.0",
-        "fast-check": "4.3.0",
-        "globals": "16.4.0",
-        "prettier": "3.6.2",
-        "prettier-plugin-multiline-arrays": "4.0.3",
-        "rollup": "4.52.5",
-        "tslib": "2.8.1",
-        "typescript": "5.9.3",
-        "typescript-eslint": "8.46.2",
-        "vitest": "4.0.3"
-    },
-    "keywords": [
-        "actions",
-        "node",
-        "setup"
-    ],
-    "license": "MIT",
-    "main": "dist/index.cjs",
-    "name": "random-wait-action",
-    "packageManager": "pnpm@10.18.3+sha512.bbd16e6d7286fd7e01f6b3c0b3c932cda2965c06a908328f74663f10a9aea51f1129eea615134bf992831b009eabe167ecb7008b597f40ff9bc75946aadfb08d",
-    "private": true,
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/AliSajid/random-wait-action"
-    },
-    "scripts": {
-        "all": "pnpm run format:check && pnpm run lint:check && pnpm run test && pnpm run package",
-        "format:check": "prettier --check '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
-        "format:write": "prettier --write '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
-        "lint:check": "eslint .",
-        "lint:fix": "eslint . --fix",
-        "package": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
-        "test": "vitest --run",
-        "test:coverage": "vitest --coverage"
-    },
-    "type": "module",
-    "version": "2.11.1"
+  "author": "Ali Sajid Imami",
+  "dependencies": {
+    "@actions/core": "^1.10.1"
+  },
+  "description": "A Github Action to introduce a random delay in a Job",
+  "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.20",
+    "@typescript-eslint/parser": "^7.0.2",
+    "@vercel/ncc": "^0.38.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-github": "^4.10.1",
+    "eslint-plugin-jest": "^27.9.0",
+    "jest": "^29.7.0",
+    "js-yaml": "^4.1.0",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.3.3"
+  },
+  "keywords": [
+    "actions",
+    "node",
+    "setup"
+  ],
+  "license": "MIT",
+  "main": "lib/main.js",
+  "name": "random-wait-action",
+  "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AliSajid/random-wait-action"
+  },
+  "scripts": {
+    "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
+    "build": "tsc",
+    "format": "prettier --write '**/*.ts'",
+    "format-check": "prettier --check '**/*.ts'",
+    "lint": "eslint src/**/*.ts",
+    "package": "ncc build --source-map --license licenses.txt",
+    "test": "jest"
+  },
+  "version": "2.1.0"
 }
