--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -17,5 +17,5 @@ plugins:
         generateNotes: 'cz bump --files-only'
     - - '@semantic-release/git'
       - assets: ['CHANGELOG.md', 'package.json', 'package-lock.json']
-      - message: 'chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}'
+        message: 'chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}'
 
