--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,11 +1,7 @@
 branches:
   - v[0-9]+.[0-9]+.[0-9]+
   - main
-  - next
-  - next-major
-  - name: beta
-    prerelease: true
-  - name: alpha
+  - name: next
     prerelease: true
 
 plugins:
