build: update things for pre-commit compliance
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,26 +1,11 @@
 {
     "arrowParens": "avoid",
     "bracketSpacing": true,
-    "overrides": [
-        {
-            "files": "*.yaml",
-            "options": {
-                "singleQuote": false,
-                "tabWidth": 2
-            }
-        },
-        {
-            "files": "*.md",
-            "options": {
-                "tabWidth": 2
-            }
-        }
-    ],
     "plugins": [
         "prettier-plugin-multiline-arrays"
     ],
     "printWidth": 80,
-    "semi": true,
+    "semi": false,
     "singleQuote": true,
     "tabWidth": 4,
     "trailingComma": "none",
