--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,114 +4,108 @@
 
 exclude: "^dist/.*$"
 repos:
-  - repo: https://github.com/commitizen-tools/commitizen
-    rev: v4.9.1
-    hooks:
-      - id: commitizen
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v6.0.0
-    hooks:
-      - id: check-json
-      - id: no-commit-to-branch
-        args:
-          - --branch
-          - main
-          - --branch
-          - next
-      - id: check-merge-conflict
-      - id: check-toml
-      - id: check-xml
-      - id: check-yaml
-      - id: end-of-file-fixer
-      - id: mixed-line-ending
-        args:
-          - --fix=no
-      - id: pretty-format-json
-        args:
-          - --indent=4
-          - --autofix
-      - id: trailing-whitespace
-        args:
-          - --markdown-linebreak-ext=md
-      - id: check-added-large-files
+    - repo: https://github.com/commitizen-tools/commitizen
+      rev: v3.20.0
+      hooks:
+          - id: commitizen
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.5.0
+      hooks:
+          - id: check-json
+          - id: no-commit-to-branch
+            args:
+                - --branch
+                - main
+                - --branch
+                - next
+          - id: check-merge-conflict
+          - id: check-toml
+          - id: check-xml
+          - id: check-yaml
+          - id: end-of-file-fixer
+          - args:
+                - --fix=no
+            id: mixed-line-ending
+          - args:
+                - --indent=4
+                - --autofix
+            id: pretty-format-json
+          - args:
+                - --markdown-linebreak-ext=md
+            id: trailing-whitespace
+    - repo: https://github.com/compilerla/conventional-pre-commit
+      rev: v3.1.0
+      hooks:
+          - args:
+                - build
+                - chore
+                - ci
+                - docs
+                - feat
+                - fix
+                - perf
+                - refactor
+                - revert
+                - style
+                - test
+                - bump
+            id: conventional-pre-commit
+            stages:
+                - commit-msg
+    - repo: https://github.com/Lucas-C/pre-commit-hooks
+      rev: v1.5.5
+      hooks:
+          - id: forbid-crlf
+          - id: remove-crlf
+          - id: forbid-tabs
+          - id: remove-tabs
+    - repo: https://github.com/adrienverge/yamllint
+      rev: v1.35.1
+      hooks:
+          - args:
+                - --config=$(pwd)/.yamllint.yml
+            id: yamllint
+            stages:
+                - commit-msg
+    - repo: https://github.com/igorshubovych/markdownlint-cli
+      rev: v0.39.0
+      hooks:
+          - args:
+                - --ignore
+                - CHANGELOG.md
+            id: markdownlint
+    - repo: https://github.com/Yelp/detect-secrets
+      rev: v1.4.0
+      hooks:
+          - id: detect-secrets
+            args:
+                - '--baseline'
+                - '.secrets.baseline'
+            exclude: 'pnpm-lock.yaml'
+    - repo: https://github.com/sirosen/texthooks
+      rev: 0.6.4
+      hooks:
+          - id: fix-smartquotes
+          - id: fix-ligatures
+          - id: forbid-bidi-controls
 
-  - repo: https://github.com/compilerla/conventional-pre-commit
-    rev: v4.3.0
-    hooks:
-      - id: conventional-pre-commit
-        args:
-          - build
-          - chore
-          - ci
-          - docs
-          - feat
-          - fix
-          - perf
-          - refactor
-          - revert
-          - style
-          - test
-          - bump
-        stages:
-          - commit-msg
-
-  - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.5.5
-    hooks:
-      - id: forbid-crlf
-      - id: remove-crlf
-      - id: forbid-tabs
-      - id: remove-tabs
-  - repo: https://github.com/adrienverge/yamllint
-    rev: v1.37.1
-    hooks:
-      - id: yamllint
-        args:
-          - --config=$(pwd)/.yamllint.yml
-        stages:
-          - commit-msg
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.45.0
-    hooks:
-      - id: markdownlint
-        args:
-          - --ignore
-          - CHANGELOG.md
-  - repo: https://github.com/Yelp/detect-secrets
-    rev: v1.5.0
-    hooks:
-      - id: detect-secrets
-        args:
-          - "--baseline"
-          - ".secrets.baseline"
-        exclude: "pnpm-lock.yaml"
-  - repo: https://github.com/sirosen/texthooks
-    rev: 0.7.1
-    hooks:
-      - id: fix-smartquotes
-      - id: fix-ligatures
-      - id: forbid-bidi-controls
-  - repo: https://github.com/zricethezav/gitleaks
-    rev: v8.28.0
-    hooks:
-      - id: gitleaks
-  - repo: local
-    hooks:
-      - id: prettier
-        name: prettier
-        entry: node_modules/.bin/prettier --write --ignore-unknown
-        language: system
-        exclude: "^dist/.*$"
-      - id: eslint
-        name: eslint
-        entry: node_modules/.bin/eslint --fix
-        language: system
-        files: \.[jt]sx?$
-  - repo: https://github.com/fsfe/reuse-tool
-    rev: "v6.1.2"
-    hooks:
-      - id: reuse
-  - repo: https://github.com/renovatebot/pre-commit-hooks
-    rev: 41.159.4
-    hooks:
-      - id: renovate-config-validator
+    - repo: https://github.com/zricethezav/gitleaks
+      rev: v8.18.2
+      hooks:
+          - id: gitleaks
+    - repo: https://github.com/pre-commit/mirrors-prettier
+      rev: 'v3.1.0'
+      hooks:
+          - id: prettier
+            additional_dependencies:
+                - 'prettier@3.1.0'
+                - 'prettier-plugin-multiline-arrays@3.0.4'
+    - repo: https://github.com/pre-commit/mirrors-eslint
+      rev: 'v8.56.0' # Use the sha / tag you want to point at
+      hooks:
+          - id: eslint
+            files: \.[jt]sx?$
+            additional_dependencies:
+                - eslint@8.56.0
+                - eslint-plugin-github@4.4.0
+                - eslint-plugin-jest@27.1.3
