--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,15 @@
 {
-    "$schema": "https://json.schemastore.org/tsconfig",
     "compilerOptions": {
-        "outDir": "./dist"
+        "esModuleInterop": true,
+        "module": "commonjs",
+        "noImplicitAny": true,
+        "outDir": "./lib",
+        "rootDir": "./src",
+        "strict": true,
+        "target": "es6"
     },
     "exclude": [
         "node_modules",
-        "__fixtures__",
-        "coverage",
-        "dist",
-        "megalinter-reports/**/*.js",
-        "vitest.config.ts",
-        "docs"
-    ],
-    "extends": "./tsconfig.base.json",
-    "include": [
-        "src",
-        "rollup.config.ts"
+        "**/*.test.ts"
     ]
 }
