build: update things for pre-commit compliance
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -15,6 +15,9 @@
         "renovate"
     ],
     "platformCommit": true,
+    "pre-commit": {
+        "enabled": true
+    },
     "schedule": [
         "after 10pm and before 5am every weekday",
         "every weekend"
