--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,13 @@
 {
-  "arrowParens": "avoid",
-  "bracketSpacing": false,
-  "printWidth": 80,
-  "semi": false,
-  "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "none",
-  "useTabs": false
+    "arrowParens": "avoid",
+    "bracketSpacing": true,
+    "plugins": [
+        "prettier-plugin-multiline-arrays"
+    ],
+    "printWidth": 80,
+    "semi": false,
+    "singleQuote": true,
+    "tabWidth": 4,
+    "trailingComma": "none",
+    "useTabs": false
 }
