--- a/package.json
+++ b/package.json
@@ -1,45 +1,46 @@
 {
-  "author": "Ali Sajid Imami",
-  "dependencies": {
-    "@actions/core": "^1.10.1"
-  },
-  "description": "A Github Action to introduce a random delay in a Job",
-  "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.30",
-    "@typescript-eslint/parser": "^7.3.1",
-    "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-github": "^4.10.2",
-    "eslint-plugin-jest": "^27.9.0",
-    "jest": "^29.7.0",
-    "js-yaml": "^4.1.0",
-    "prettier": "^2.8.8",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.4.2"
-  },
-  "keywords": [
-    "actions",
-    "node",
-    "setup"
-  ],
-  "license": "MIT",
-  "main": "lib/main.js",
-  "name": "random-wait-action",
-  "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2",
-  "private": true,
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AliSajid/random-wait-action"
-  },
-  "scripts": {
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
-    "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
-    "format-check": "prettier --check '**/*.ts'",
-    "lint": "eslint src/**/*.ts",
-    "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest"
-  },
-  "version": "2.2.1"
+    "author": "Ali Sajid Imami",
+    "dependencies": {
+        "@actions/core": "^1.10.1"
+    },
+    "description": "A Github Action to introduce a random delay in a Job",
+    "devDependencies": {
+        "@types/jest": "^29.5.12",
+        "@types/node": "^20.11.30",
+        "@typescript-eslint/parser": "^7.3.1",
+        "@vercel/ncc": "^0.38.1",
+        "eslint": "^8.57.0",
+        "eslint-plugin-github": "^4.10.2",
+        "eslint-plugin-jest": "^27.9.0",
+        "jest": "^29.7.0",
+        "js-yaml": "^4.1.0",
+        "prettier": "^3.2.5",
+        "prettier-plugin-multiline-arrays": "^3.0.4",
+        "ts-jest": "^29.1.2",
+        "typescript": "^5.4.2"
+    },
+    "keywords": [
+        "actions",
+        "node",
+        "setup"
+    ],
+    "license": "MIT",
+    "main": "lib/main.js",
+    "name": "random-wait-action",
+    "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2",
+    "private": true,
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/AliSajid/random-wait-action"
+    },
+    "scripts": {
+        "all": "npm run build && npm run format && npm run lint && npm run package && npm test",
+        "build": "tsc",
+        "format": "prettier --write '**/*.ts'",
+        "format-check": "prettier --check '**/*.ts'",
+        "lint": "eslint src/**/*.ts",
+        "package": "ncc build --source-map --license licenses.txt",
+        "test": "jest"
+    },
+    "version": "2.2.1"
 }
