--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -95,6 +95,7 @@ repos:
             additional_dependencies:
                 - 'prettier@3.1.0'
                 - 'prettier-plugin-multiline-arrays@3.0.4'
+            exclude: '^dist/.*$'
     - repo: https://github.com/pre-commit/mirrors-eslint
       rev: 'v8.56.0' # Use the sha / tag you want to point at
       hooks:
