--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,8 +2,7 @@ on:
     push:
         branches:
             - main
-            - alpha
-            - beta
+            - next
 
 name: Release
 
