--- a/.github/workflows/codeql-analysis.yaml
+++ b/.github/workflows/codeql-analysis.yaml
@@ -13,10 +13,14 @@ name: 'CodeQL'
 
 on:
     push:
-        branches: [main]
+        branches:
+            - 'main'
+            - 'next'
     pull_request:
         # The branches below must be a subset of the branches above
-        branches: [main]
+        branches:
+            - 'main'
+            - 'next'
     schedule:
         - cron: '31 7 * * 3'
 
