build: add reuse compliance
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/action.yml
+++ b/action.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022 - 2024 Ali Sajid Imami
+#
+# SPDX-License-Identifier: MIT
+
 name: 'Random Wait Action'
 description: 'A Github Action to introduce a random delay in a Job'
 author: 'Ali Sajid Imami'
