--- a/.cz.toml
+++ b/.cz.toml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022 - 2024 Ali Sajid Imami
+#
+# SPDX-License-Identifier: MIT
+
 [tool]
 [tool.commitizen]
 name = "cz_conventional_commits"
