--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022 - 2024 Ali Sajid Imami
+#
+# SPDX-License-Identifier: MIT
+
 exclude: '^dist/.*$'
 repos:
     - repo: https://github.com/commitizen-tools/commitizen
