--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2022 - 2024 Ali Sajid Imami
+#
+# SPDX-License-Identifier: MIT
+
 branches:
     - v[0-9]+.[0-9]+.[0-9]+
     - main
