--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
       rev: v3.24.0
       hooks:
           - id: commitizen
+
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: v4.6.0
       hooks:
@@ -23,20 +24,23 @@ repos:
           - id: check-xml
           - id: check-yaml
           - id: end-of-file-fixer
-          - args:
+          - id: mixed-line-ending
+            args:
                 - --fix=no
-            id: mixed-line-ending
-          - args:
+          - id: pretty-format-json
+            args:
                 - --indent=4
                 - --autofix
-            id: pretty-format-json
-          - args:
+          - id: trailing-whitespace
+            args:
                 - --markdown-linebreak-ext=md
-            id: trailing-whitespace
+          - id: check-added-large-files
+
     - repo: https://github.com/compilerla/conventional-pre-commit
       rev: v3.2.0
       hooks:
-          - args:
+          - id: conventional-pre-commit
+            args:
                 - build
                 - chore
                 - ci
@@ -49,9 +53,9 @@ repos:
                 - style
                 - test
                 - bump
-            id: conventional-pre-commit
             stages:
                 - commit-msg
+
     - repo: https://github.com/Lucas-C/pre-commit-hooks
       rev: v1.5.5
       hooks:
@@ -62,18 +66,20 @@ repos:
     - repo: https://github.com/adrienverge/yamllint
       rev: v1.35.1
       hooks:
-          - args:
+          - id: yamllint
+            args:
                 - --config=$(pwd)/.yamllint.yml
-            id: yamllint
             stages:
                 - commit-msg
+
     - repo: https://github.com/igorshubovych/markdownlint-cli
       rev: v0.39.0
       hooks:
-          - args:
+          - id: markdownlint
+            args:
                 - --ignore
                 - CHANGELOG.md
-            id: markdownlint
+
     - repo: https://github.com/Yelp/detect-secrets
       rev: v1.4.0
       hooks:
@@ -82,6 +88,7 @@ repos:
                 - '--baseline'
                 - '.secrets.baseline'
             exclude: 'pnpm-lock.yaml'
+
     - repo: https://github.com/sirosen/texthooks
       rev: 0.6.6
       hooks:
@@ -93,6 +100,7 @@ repos:
       rev: v8.18.2
       hooks:
           - id: gitleaks
+
     - repo: https://github.com/pre-commit/mirrors-prettier
       rev: 'v3.1.0'
       hooks:
@@ -101,6 +109,7 @@ repos:
                 - 'prettier@3.1.0'
                 - 'prettier-plugin-multiline-arrays@3.0.4'
             exclude: '^dist/.*$'
+
     - repo: https://github.com/pre-commit/mirrors-eslint
       rev: 'v9.1.1' # Use the sha / tag you want to point at
       hooks:
