--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -119,3 +119,7 @@ repos:
                 - eslint@8.56.0
                 - eslint-plugin-github@4.4.0
                 - eslint-plugin-jest@27.1.3
+    - repo: https://github.com/fsfe/reuse-tool
+      rev: 'v3.0.2'
+      hooks:
+          - id: reuse
