--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -123,3 +123,7 @@ repos:
       rev: 'v3.0.2'
       hooks:
           - id: reuse
+    - repo: https://github.com/renovatebot/pre-commit-hooks
+      rev: 37.373.0
+      hooks:
+          - id: renovate-config-validator
