build: add automerge bool
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "autofix",
+        "automerge",
         "Imamiland",
+        "Sajid",
         "schneegans"
     ],
     "editor.formatOnPaste": true,
