--- a/renovate.json
+++ b/renovate.json
@@ -6,14 +6,8 @@
         "config:best-practices",
         "group:definitelyTyped",
         "group:githubArtifactActions",
-        "group:linters",
-        ":pinDependencies",
-        ":pinDevDependencies",
-        ":pinSkipCi",
-        ":reviewer(AliSajid)",
-        "security:minimumReleaseAgeNpm"
+        "group:linters"
     ],
-    "gitAuthor": "Imamiland CI Bot <152510784+imamiland-bot@users.noreply.github.com>",
     "labels": [
         "dependencies",
         "renovate"
@@ -34,7 +28,11 @@
         {
             "automerge": true,
             "matchManagers": [
-                "pre-commit"
+                "pre-commit",
+                "github-actions"
+            ],
+            "schedule": [
+                "before 5am every weekday"
             ]
         },
         {
@@ -44,7 +42,7 @@
                 "minor",
                 "patch"
             ],
-            "matchPackagePrefixes": [
+            "matchPackagePatterns": [
                 "eslint",
                 "prettier",
                 "jest"
