build: update the eslint config
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "autofix",
         "automerge",
+        "camelcase",
         "Imamiland",
         "Sajid",
         "schneegans"
