--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     },
     "description": "A Github Action to introduce a random delay in a Job",
     "devDependencies": {
+        "@eslint/eslintrc": "^3.1.0",
+        "@eslint/js": "^9.5.0",
         "@types/jest": "29.5.12",
         "@types/node": "20.14.2",
         "@typescript-eslint/parser": "7.13.0",
@@ -12,6 +14,7 @@
         "eslint": "8.57.0",
         "eslint-plugin-github": "4.10.2",
         "eslint-plugin-jest": "28.6.0",
+        "globals": "^15.4.0",
         "jest": "29.7.0",
         "js-yaml": "4.1.0",
         "prettier": "3.3.2",
