--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "@types/node": "20.14.2",
         "@typescript-eslint/parser": "7.13.0",
         "@vercel/ncc": "0.38.1",
-        "eslint": "8.57.0",
-        "eslint-plugin-github": "4.10.2",
+        "eslint": "9.5.0",
+        "eslint-plugin-github": "5.0.1",
         "eslint-plugin-jest": "28.6.0",
         "globals": "^15.4.0",
         "jest": "29.7.0",
@@ -41,7 +41,7 @@
         "build": "tsc",
         "format": "prettier --write '**/*.ts'",
         "format-check": "prettier --check '**/*.ts'",
-        "lint": "eslint src/**/*.ts",
+        "lint": "eslint",
         "package": "ncc build --source-map --license licenses.txt",
         "test": "jest"
     },
