--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,11 @@
         "autofix",
         "automerge",
         "camelcase",
+        "commitizen",
         "Imamiland",
         "Sajid",
-        "schneegans"
+        "schneegans",
+        "tseslint"
     ],
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
