--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "devDependencies": {
         "@eslint/eslintrc": "3.1.0",
         "@eslint/js": "9.5.0",
+        "@types/eslint__js": "^8.42.3",
         "@types/jest": "29.5.12",
         "@types/node": "20.14.9",
-        "@typescript-eslint/parser": "7.14.1",
         "@vercel/ncc": "0.38.1",
         "eslint": "9.5.0",
-        "eslint-plugin-github": "5.0.1",
         "eslint-plugin-jest": "28.6.0",
         "globals": "15.6.0",
         "jest": "29.7.0",
@@ -20,7 +19,8 @@
         "prettier": "3.3.2",
         "prettier-plugin-multiline-arrays": "3.0.6",
         "ts-jest": "29.1.5",
-        "typescript": "5.5.2"
+        "typescript": "5.5.2",
+        "typescript-eslint": "^7.14.1"
     },
     "keywords": [
         "actions",
