feat: updated the dependencies
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,12 @@
     "cSpell.words": [
         "autofix",
         "automerge",
+        "camelcase",
+        "commitizen",
         "Imamiland",
         "Sajid",
-        "schneegans"
+        "schneegans",
+        "tseslint"
     ],
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
