--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,6 +10,9 @@ jobs:
     release:
         name: Semantic Release
         runs-on: ubuntu-latest
+        permissions:
+            id-token: write
+            attestations: write
         steps:
             - name: Checkout
               uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
@@ -24,6 +27,18 @@ jobs:
 
             - name: install commitizen
               run: pip install -U commitizen
+
+            - name: Run the build process
+              run: pnpm run all
+
+            - name: Attest build provenance
+              id: attest
+              uses: actions/attest-build-provenance@bdd51370e0416ac948727f861e03c2f05d32d78e # v1.3.2
+              with:
+                  subject-path: dist/index.js
+
+            - name: Move attestation file to dist/
+              run: mv ${{ steps.attest.outputs.bundle-path }} dist/attestation.jsonl
 
             - name: Semantic Release
               uses: cycjimmy/semantic-release-action@v4
