--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -3,7 +3,6 @@
 # SPDX-License-Identifier: MIT
 
 branches:
-    - v[0-9]+.[0-9]+.[0-9]+
     - main
     - name: next
       prerelease: true
@@ -12,9 +11,17 @@ plugins:
     - '@semantic-release/commit-analyzer'
     - '@semantic-release/release-notes-generator'
     - - '@semantic-release/git'
-      - assets: ['CHANGELOG.md', 'package.json', 'package-lock.json']
+      - assets:
+            ['CHANGELOG.md', 'package.json', 'package-lock.json', 'dist/*.js']
         message: 'chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}'
-    - '@semantic-release/github'
+    - - '@semantic-release/github'
+      - assets:
+            - path: 'dist/index.js'
+              label: 'JavaScript bundle'
+              name: 'random-wait-action-${nextRelease.version}.js'
+            - path: 'dist/attestation.jsonl'
+              label: 'Attestation file'
+              name: 'attestation-${nextRelease.version}.jsonl'
     - - '@semantic-release/exec'
       - prepareCmd: 'echo "Preparing to release ${nextRelease.version}"'
         generateNotes: 'cz bump --files-only'
