--- a/.github/workflows/check-dist.yaml
+++ b/.github/workflows/check-dist.yaml
@@ -7,7 +7,8 @@ name: Check dist/
 
 on:
     push:
-        branches:
+        branches-ignore:
+            - next
             - main
         paths-ignore:
             - '**.md'
@@ -21,14 +22,16 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+            - name: Checkout repository
+              uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
 
             - name: Set Node.js 20.x
-              uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4
+              uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
               with:
                   node-version: 20.x
 
-            - uses: pnpm/action-setup@v3
+            - name: Setup pnpm
+              uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
               with:
                   run_install: false
 
@@ -36,17 +39,21 @@ jobs:
               id: pnpm-cache
               run: |
                   echo "pnpm_cache_dir=$(pnpm store path)" >> $GITHUB_OUTPUT
-            - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4
-              name: Setup pnpm cache
+
+            - name: Setup pnpm cache
+              uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
               with:
                   path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
                   key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
                   restore-keys: |
                       ${{ runner.os }}-pnpm-store-
-            - run: |
-                  pnpm install
-            - run: |
-                  pnpm run all
+
+            - name: Install dependencies
+              run: pnpm install
+
+            - name: Run the build process
+              run: pnpm run all
+
             - name: Compare the expected and actual dist/ directories
               run: |
                   if [ "$(git diff --ignore-space-at-eol dist/ | wc -l)" -gt "0" ]; then
@@ -57,7 +64,7 @@ jobs:
               id: diff
 
             # If index.js was different than expected, upload the expected version as an artifact
-            - uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4
+            - uses: actions/upload-artifact@65462800fd760344b1a7b4382951275a0abb4808 # v4.3.3
               if: ${{ failure() && steps.diff.conclusion == 'failure' }}
               with:
                   name: dist
