--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,8 +14,8 @@ jobs:
             id-token: write
             attestations: write
         steps:
-            - name: Checkout
-              uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4
+            - name: Checkout repository
+              uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
               with:
                   fetch-depth: 0
                   persist-credentials: false
@@ -25,8 +25,33 @@ jobs:
               with:
                   python-version: '3.10'
 
+            - name: Set Node.js 20.x
+              uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
+              with:
+                  node-version: 20.x
+
             - name: install commitizen
               run: pip install -U commitizen
+
+            - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
+              with:
+                  run_install: false
+
+            - name: Get pnpm store directory
+              id: pnpm-cache
+              run: |
+                  echo "pnpm_cache_dir=$(pnpm store path)" >> $GITHUB_OUTPUT
+
+            - name: Setup pnpm cache
+              uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4
+              with:
+                  path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+                  restore-keys: |
+                      ${{ runner.os }}-pnpm-store-
+
+            - name: Install dependencies
+              run: pnpm install
 
             - name: Run the build process
               run: pnpm run all
@@ -44,7 +69,7 @@ jobs:
               uses: cycjimmy/semantic-release-action@v4
               id: semantic
               with:
-                  semantic_version: 22
+                  semantic_version: 24.0.0
                   extra_plugins: |
                       @semantic-release/exec@6
                       @semantic-release/git@10
