--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,6 +13,9 @@ jobs:
         permissions:
             id-token: write
             attestations: write
+            contents: write
+            issues: write
+            pull-requests: write
         steps:
             - name: Checkout repository
               uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
