fix: update package
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Imamiland",
         "linebreak",
         "markdownlint",
+        "Parens",
         "Sajid",
         "schneegans",
         "smartquotes",
