build: add stylistic to automerge group
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -42,14 +42,15 @@
                 "minor",
                 "patch"
             ],
-            "matchPackagePatterns": [
+            "matchPackagePrefixes": [
                 "eslint",
+                "stylistic",
                 "prettier",
                 "jest"
             ]
         }
     ],
-    "platformCommit": true,
+    "platformCommit": "enabled",
     "pre-commit": {
         "enabled": true
     },
