build: add stylistic to automerge group
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/renovate.json
+++ b/renovate.json
@@ -34,12 +34,13 @@
             ],
             "matchPackagePrefixes": [
                 "eslint",
+                "stylistic",
                 "prettier",
                 "jest"
             ]
         }
     ],
-    "platformCommit": true,
+    "platformCommit": "enabled",
     "pre-commit": {
         "enabled": true
     },
