docs: update the README.md with current versions
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -98,5 +98,8 @@ Thumbs.db
 __tests__/runner/*
 lib/**/*
 
-# Ignore ltex-specific neovim files
+# Ignore ltex-specific neovim filesa
 ltex.*
+
+# Ignmore megalinter files
+megalinter-reports/*
