--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,7 +69,7 @@ jobs:
               run: mv ${{ steps.attest.outputs.bundle-path }} dist/attestation.jsonl
 
             - name: Semantic Release
-              uses: cycjimmy/semantic-release-action@v4
+              uses: cycjimmy/semantic-release-action@cb425203a562475bca039ba4dbf90c7f9ac790f4 # v4.1.0
               id: semantic
               with:
                   semantic_version: 24.0.0
