feat: update the files with conflicts removed
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -101,5 +101,5 @@ lib/**/*
 # Ignore ltex-specific neovim filesa
 ltex.*
 
-# Ignmore megalinter files
+# Ignore megalinter files
 megalinter-reports/*
