--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,11 @@
 {
     "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-    "assignees": ["AliSajid"],
-    "baseBranches": ["next"],
+    "assignees": [
+        "AliSajid"
+    ],
+    "baseBranches": [
+        "next"
+    ],
     "extends": [
         "config:best-practices",
         "group:definitelyTyped",
@@ -13,12 +17,21 @@
             "automerge": true,
             "groupName": "Pre-Commit and GitHub Actions",
             "groupSlug": "pre-commit-and-github-actions",
-            "matchManagers": ["pre-commit", "github-actions"],
-            "schedule": ["before 5am every weekday"]
+            "matchManagers": [
+                "pre-commit",
+                "github-actions"
+            ],
+            "schedule": [
+                "before 5am every weekday"
+            ]
         },
         {
             "automerge": true,
-            "matchDepTypes": ["devDependencies", "minor", "patch"],
+            "matchDepTypes": [
+                "devDependencies",
+                "minor",
+                "patch"
+            ],
             "matchPackageNames": [
                 "eslint{/,}**",
                 "stylistic{/,}**",
