ci: add codecov upload action

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
         "format-check": "prettier --check '**/*.ts'",
         "lint": "eslint",
         "package": "ncc build --source-map --license licenses.txt",
-        "test": "jest"
+        "test": "jest",
+        "test:coverage": "jest --coverage"
     },
     "version": "2.2.1"
 }
