ci: consistent quotation marks in codeql-analysis action

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,15 @@
 {
     "arrowParens": "avoid",
     "bracketSpacing": true,
+    "overrides": [
+        {
+            "files": "*.yaml",
+            "options": {
+                "singleQuote": false,
+                "tabWidth": 2
+            }
+        }
+    ],
     "plugins": [
         "prettier-plugin-multiline-arrays"
     ],
