--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,88 +1,69 @@
 on:
-    push:
-        branches:
-            - main
-            - next
+  push:
+    branches:
+      - main
+      - next
 
 name: Release
 
 permissions:
-    contents: read
+  contents: read
 
 jobs:
-    release:
-        name: Semantic Release
-        runs-on: ubuntu-latest
-        permissions:
-            id-token: write
-            attestations: write
-            contents: write
-            issues: write
-            pull-requests: write
-        steps:
-            - name: Harden Runner
-              uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
-              with:
-                  egress-policy: audit
+  release:
+    name: Semantic Release
+    runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      attestations: write
+      contents: write
+      issues: write
+      pull-requests: write
+    steps:
+      - name: Harden Runner
+        uses: step-security/harden-runner@91182cccc01eb5e619899d80e4e971d6181294a7 # v2.10.1
+        with:
+          egress-policy: audit
 
-            - name: Checkout repository
-              uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
-              with:
-                  fetch-depth: 0
-                  persist-credentials: false
+      - name: Checkout repository
+        uses: actions/checkout@eef61447b9ff4aafe5dcd4e0bbf5d482be7e7871 # v4.2.1
+        with:
+          fetch-depth: 0
+          persist-credentials: false
 
-            - name: Install Python
-              uses: actions/setup-python@f677139bbe7f9c59b41e40162b753c062f5d49a3 # v5
-              with:
-                  python-version: '3.10'
+      - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
+        with:
+          run_install: false
+          version: 9.11.0
 
-            - name: Set Node.js 20.x
-              uses: actions/setup-node@0a44ba7841725637a19e28fa30b79a866c81b0a6 # v4.0.4
-              with:
-                  node-version: 20.x
+      - name: Set Node.js 20.x
+        uses: actions/setup-node@0a44ba7841725637a19e28fa30b79a866c81b0a6 # v4.0.4
+        with:
+          node-version: 20.x
+          cache: pnpm
 
-            - name: install commitizen
-              run: pip install -U commitizen
+      - name: Install dependencies
+        run: pnpm install
 
-            - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
-              with:
-                  run_install: false
+      - name: Run the build process
+        run: pnpm run all
 
-            - name: Get pnpm store directory
-              id: pnpm-cache
-              run: |
-                  echo "pnpm_cache_dir=$(pnpm store path)" >> $GITHUB_OUTPUT
+      - name: Attest build provenance
+        id: attest
+        uses: actions/attest-build-provenance@1c608d11d69870c2092266b3f9a6f3abbf17002c # v1.4.3
+        with:
+          subject-path: dist/index.js
 
-            - name: Setup pnpm cache
-              uses: actions/cache@3624ceb22c1c5a301c8db4169662070a689d9ea8 # v4
-              with:
-                  path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
-                  key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-                  restore-keys: |
-                      ${{ runner.os }}-pnpm-store-
+      - name: Move attestation file to dist/
+        run: mv ${{ steps.attest.outputs.bundle-path }} dist/attestation.jsonl
 
-            - name: Install dependencies
-              run: pnpm install
-
-            - name: Run the build process
-              run: pnpm run all
-
-            - name: Attest build provenance
-              id: attest
-              uses: actions/attest-build-provenance@1c608d11d69870c2092266b3f9a6f3abbf17002c # v1.4.3
-              with:
-                  subject-path: dist/index.js
-
-            - name: Move attestation file to dist/
-              run: mv ${{ steps.attest.outputs.bundle-path }} dist/attestation.jsonl
-
-            - name: Semantic Release
-              uses: cycjimmy/semantic-release-action@b1b432f13acb7768e0c8efdec416d363a57546f2 # v4.1.1
-              id: semantic
-              with:
-                  semantic_version: 24.0.0
-                  extra_plugins: |
-                      @semantic-release/exec@6
-                      @semantic-release/git@10
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Semantic Release
+        uses: cycjimmy/semantic-release-action@b1b432f13acb7768e0c8efdec416d363a57546f2 # v4.1.1
+        id: semantic
+        with:
+          semantic_version: 24.0.0
+          extra_plugins: |
+            @semantic-release/exec@6
+            @semantic-release/git@10
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
