fix: update the bundles of generated files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
         "node_modules",
         "**/*.test.ts",
         "megalinter-reports/**/*.js",
-        "jest.config.ts"
+        "jest.config.ts",
+        "docs"
     ]
 }
